[gd_scene load_steps=22 format=2]

[ext_resource path="res://sounds/dash-01.wav" type="AudioStream" id=1]
[ext_resource path="res://sprites/player-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://animations/blueIdle.tres" type="Animation" id=3]
[ext_resource path="res://animations/blueRun.tres" type="Animation" id=4]
[ext_resource path="res://animations/blueClimb.tres" type="Animation" id=5]
[ext_resource path="res://animations/greyIdle.tres" type="Animation" id=6]
[ext_resource path="res://animations/greyRun.tres" type="Animation" id=7]
[ext_resource path="res://animations/blueJump.tres" type="Animation" id=8]
[ext_resource path="res://animations/blueFall.tres" type="Animation" id=9]
[ext_resource path="res://animations/blueWall Slide.tres" type="Animation" id=10]
[ext_resource path="res://animations/greyJump.tres" type="Animation" id=11]
[ext_resource path="res://animations/greyFall.tres" type="Animation" id=12]
[ext_resource path="res://animations/greyWall Slide.tres" type="Animation" id=13]
[ext_resource path="res://animations/greyClimb.tres" type="Animation" id=14]
[ext_resource path="res://player/Player.gd" type="Script" id=16]
[ext_resource path="res://player/camera.gd" type="Script" id=17]
[ext_resource path="res://animations/greyDead.tres" type="Animation" id=18]
[ext_resource path="res://animations/blueDead.tres" type="Animation" id=19]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/key_pickup.wav" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.803, 4.454 )
shape = SubResource( 1 )

[node name="Rotatable" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rotatable"]
scale = Vector2( -2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 1, -6 )
vframes = 10
hframes = 8
frame = 40

[node name="RayCast2D" type="RayCast2D" parent="Rotatable"]
position = Vector2( 0, 18.5 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blueClimb = ExtResource( 5 )
anims/blueDead = ExtResource( 19 )
anims/blueFall = ExtResource( 9 )
anims/blueIdle = ExtResource( 3 )
anims/blueJump = ExtResource( 8 )
anims/blueRun = ExtResource( 4 )
"anims/blueWall Slide" = ExtResource( 10 )
anims/greyClimb = ExtResource( 14 )
anims/greyDead = ExtResource( 18 )
anims/greyFall = ExtResource( 12 )
anims/greyIdle = ExtResource( 6 )
anims/greyJump = ExtResource( 11 )
anims/greyRun = ExtResource( 7 )
"anims/greyWall Slide" = ExtResource( 13 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DashTimer" type="Timer" parent="Cooldown"]
wait_time = 0.5
one_shot = true

[node name="TrailTimer" type="Timer" parent="Cooldown"]
wait_time = 0.08
autostart = true

[node name="DeadTimer" type="Timer" parent="Cooldown"]
one_shot = true

[node name="CameraAnchor" type="Position2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraAnchor"]
current = true
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 17 )

[node name="PositionTween" type="Tween" parent="CameraAnchor/Camera2D"]

[node name="Sounds" type="Node" parent="."]

[node name="Dash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 1 )
volume_db = -5.0

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 20 )

[node name="KeyPickup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 21 )
[connection signal="timeout" from="Cooldown/DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Cooldown/TrailTimer" to="." method="_on_TrailTimer_timeout"]
[connection signal="timeout" from="Cooldown/DeadTimer" to="." method="_on_DeadTimer_timeout"]
